[package]
name = "hanover-flipdot"
description = "An implementation of the Hanover Displays flipdot protocol"
version = "0.1.0"
authors = ["Sam W <sam@wlcx.cc>"]
edition = "2021"
license = "MIT"
keywords = ["hanover", "flipdot", "graphics", "embedded-graphics"]
repository = "https://github.com/wlcx/hanover-flipdot"
readme = "readme.md"

[features]
default = [ "std" ]
std = ["bitvec/std"]
embedded-graphics = [ "dep:embedded-graphics" ]

[dependencies]
bitvec = "1.0.1"
core-error = "0.0.0"
embedded-graphics = { version = "0.8.1", optional = true }
